projet_gl/src/test/deca/syntax/invalid/opArith/incorrectDivide.deca
// Description:
//    invalid test parser for binary expression (divide).
//
// Resultats:
//    ligne 13 : mismatched input ';' expecting {'true', 'new', 'null', 'readInt', 'false', 'readFloat', 'this', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//
// Historique:
//    cree le 12/01/2024

{
   int x = 1;
   int y = 2;
   int div = y/;
}
